--- a/test.html
+++ b/test.html
@@ -12,6 +12,27 @@
 
 </head>
 <body>
+    <header>
+    <div class="container">
+     <nav class="navbar navbar-expand-lg navbar-light bg-white">
+        <div class="collapse navbar-collapse" class="align-self-stretch" id="navbarText">
+        <span class="navbar-text" id="sara">Sara Overby</span>
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="about.html">About</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="portfolio.html">Portfolio</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="contact.html">Contact</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+    </nav>
+
+    </header>
    
 <div class="container">
     <figure class="figure">
