--- a/portfolio.html
+++ b/portfolio.html
@@ -25,7 +25,7 @@
               </span>
                 <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-              <a class="nav-link" href="about.html">About</a>
+              <a class="nav-link" href="index.html">About</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="portfolio.html">Portfolio</a>
