--- a/portfolio.html
+++ b/portfolio.html
@@ -46,7 +46,7 @@
 
         <div class="container">
             <figure class="figure">
-                <img src="assets/images/fossil9.jpg" class="figure-img img-fluid rounded" width="200" height="200" alt="A generic square placeholder image with rounded corners in a figure.">
+                <img src="assets/images/fossil9.jpg" class="figure-img img-fluid rounded" alt="Fossil">
                 <figcaption class="figure-caption"><a href="https://overbysara.github.io/unit-4-game/">Fossil Collector Game</a></figcaption>
               </figure>
         
