--- a/portfolio.html
+++ b/portfolio.html
@@ -51,8 +51,8 @@
               </figure>
         
               <figure class="figure">
-                  <img src="assets/images/Esnow.png" class="figure-img img-fluid rounded" width="200px" alt="A generic square placeholder image with rounded corners in a figure.">
-                  <figcaption class="figure-caption"><a href="#">Unused Link</a></figcaption>
+                  <img src="assets/images/Esnow.png" class="figure-img img-fluid rounded" width="200px" alt="My daughter in Denver">
+                  <figcaption class="figure-caption"><a href="https://overbysara.github.io/TriviaGame/index.html">Denver Trivia Game</a></figcaption>
                 </figure>
         
               <figure class="figure">
