--- a/portfolio.html
+++ b/portfolio.html
@@ -56,8 +56,8 @@
                 </figure>
         
               <figure class="figure">
-                  <img src="assets/images/Eunicorn.png" class="figure-img img-fluid rounded" width="200px" alt="A generic square placeholder image with rounded corners in a figure.">
-                  <figcaption class="figure-caption"><a href="#">Unused Link</a></figcaption>
+                  <img src="assets/images/eleanor.jpg" class="figure-img img-fluid rounded" width="200px" alt="Eleanor Roosevelt">
+                  <figcaption class="figure-caption"><a href="https://overbysara.github.io/GifTastic/">Giftastic Ladies</a></figcaption>
                   </figure>
         <br>
         <br>
